Ticket #24261: Added bottom padding to global navigation inner content to prevent cropping in short viewports.

--- a/application/website/static/website/css/modules/global/_navigation.scss
+++ b/application/website/static/website/css/modules/global/_navigation.scss
@@ -97,7 +97,12 @@ html.navigation--active {
 .navigation--primary {
   list-style: none;
   margin: 0;
+  padding-bottom: 3rem;
   padding-left: 0;
+
+  @media (min-width: $breakpoint-notebook) {
+    padding-bottom: 6rem;
+  }
 }
 
 .navigation--primary-group {
